ingress/main/app/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rate-limit-app
  namespace: mlops
spec:
  rateLimit:
    average: 20
    burst: 50
