ingress/main/app/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: mlops
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.alexshishin.ru`)
      kind: Rule
      services:
        - name: frontend
          port: 80
      middlewares:
        - name: rate-limit-app
  tls:
    secretName: app-tls-secret
